--- a/jaival11_lab11.html
+++ b/jaival11_lab11.html
@@ -21,6 +21,6 @@
         <div id="bookshelfList"></div>
     </div>
 
-    <script src="lab11.js"></script> <!-- Adding a link to an external JavaScript file -->
+    <script src="jaival11_lab11.js"></script> <!-- Adding a link to an external JavaScript file -->
 </body>
 </html>
